Pass VM instead of ExecState to JSGenericTypedArrayViewPrototype. <https://webkit.org/b/122632>

Reviewed by Sam Weinig.

This code was only using the ExecState to find the VM.


Canonical link: https://commits.webkit.org/140770@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157301 268f45cc-cd09-0410-ab3c-d52691b4dbfc